# aic-aipaas-v5

./: .bazelrc  .eslintrc  .flake8.ini  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bzlmod  checkstyle.xml  clippy.toml  docker-compose.yml  golangci.yml
.github/workflows/: initial.yml
